# Classifiers

./: .coveragerc  .travis.yml  LocalBuild.sh  LocalInstall.sh  LocalROSBuild.py  README.md
cppclassifiers/: CMakeLists.txt  package.txt
cppclassifiers/cpp/include/Bayesian/: BayesianNode.hpp  NaiveBayesClassifier.hpp  StateFunctor.hpp
cppclassifiers/cpp/include/Neural/: CppNeuron.hpp  FFNeuralNet.hpp  INeuron.hpp  Neuron.hpp  Synapse.hpp
cppclassifiers/cpp/src/Bayesian/: BayesianNode.cpp  StateFunctor.cpp
cppclassifiers/cpp/src/Neural/: CppNeuron.cpp  FFNeuralNet.cpp  INeuron.cpp  Neuron.cpp  Synapse.cpp
cppclassifiers/cpp/src/unitTest/: BayesianNode_unit.cpp  CppNeuron_unit.cpp  FFNeuralNet_speedTest.cpp  FFNeuralNet_unit.cpp  NaiveBayesClassifier_speedTest.cpp  NaiveBayesClassifier_unit.cpp  TestFunctions.cpp  TestFunctions.hpp  dummy_test.cpp  gtest_main.cpp  main.cpp
cppclassifiers/cpp/src/unitTest/Common/: FriendDeclarations.hpp  TestFunctions.cpp  TestStateFunctors.cpp  TestStateFunctors.hpp
cppclassifiers/cpp/src/unitTest/TestFixtures/: BayesianNodeTestFixtures.cpp  BayesianNodeTestFixtures.hpp  NaiveBayesClassifierTestFixtures.cpp  NaiveBayesClassifierTestFixtures.hpp  NetTestFixtures.cpp  NetTestFixtures.hpp  NeuronTestFixtures.cpp  NeuronTestFixtures.hpp
cppclassifiers/cpp/src/unitTest/data/: mnist_ trainingData.cpp.REMOVED.git-id  mnist_data.hpp
cppclassifiers/cpp/src/unitTest/loaders/: NeuralFileParser.cpp  NeuralFileParser.hpp
pyclassifiers/: CMakeLists.txt  __init__.py  package.xml
pyclassifiers/cpp/include/: Neuron.hpp
pyclassifiers/cpp/src/: Neuron.cpp
pyclassifiers/research/neural-networks-and-deep-learning-master/data/: trainingData.txt.REMOVED.git-id
pyclassifiers/research/neural-networks-and-deep-learning-master/src/: Network_Strategies_CompTest.py  NeuralNetRuntimes.json  TimeDataRecorder.py  custom_mnist_writer.py  mnist_cpp_writer.py  network.py  network_ff_G.py
pyclassifiers/scripts/: BayesianNetwork.py  BayesianNode.py  BinaryBayesianNode.py  NaiveBayesClassifier.py  StateFunctor.py  __init__.py  testFile.py
pyclassifiers/scripts/unitTest/: testFile_unit.py
pyclassifiers/unitTest/: BayesianNode_unit.py  TestFunctors.py  __init__.py  test_BayesianNetwork.py  test_BayesianNode.py  test_BinaryBayesianNode.py  test_NaiveBayesClassifier.py  test_StateFunctors.py  test_testFile.py
scripts/: FileSystem.py  GlobalROSBuildRules.py  LocalEnvironment.py  LocalROSBuildRules.py  Utilities.py
